Add reactions count to toot moderation interface
When clicking "open this toot in the moderation interface" the reaction count was missing from the stats.

Signed-off-by: polyamAdmin <117664621+polyamAdmin@users.noreply.github.com>

--- a/config/locales-glitch/en.yml
+++ b/config/locales-glitch/en.yml
@@ -83,6 +83,8 @@ en:
       trending_status_sensitive:
         desc_html: When trending toots are enable, allow toots with sensitive media to be elibible. Changes to this setting are not retroactive.
         title: Allow toots with sensitive media to trend
+    statuses:
+      reactions: Reactions
   appearance:
     localization:
       glitch_guide_link: https://crowdin.com/project/glitch-soc
