--- a/.github/workflows/check-i18n.yml
+++ b/.github/workflows/check-i18n.yml
@@ -2,9 +2,9 @@ name: Check i18n
 
 on:
   push:
-    branches: [main, v4.1.x]
+    branches: [main]
   pull_request:
-    branches: [main, v4.1.x]
+    branches: [main]
 
 env:
   RAILS_ENV: test
