Add instance wide custom filter
Adds a custom filter belonging to the instance actor, which is applied to every account.

Downside is, it currently only applies to logged in users.

Signed-off-by: polyamAdmin <117664621+polyamAdmin@users.noreply.github.com>

--- a/config/locales-glitch/en.yml
+++ b/config/locales-glitch/en.yml
@@ -94,6 +94,9 @@ en:
     captcha_confirmation:
       hint_html: Just one more step! To confirm your account, this server requires you to solve a CAPTCHA. You can <a href="/about/more">contact the server administrator</a> if you have questions or need assistance with confirming your account.
       title: User verification
+  filters:
+    instance_filter:
+      title: Hidden by moderators
   generic:
     use_this: Use this
   invites:
