Add ability to hide toots to moderation interface (#228)
* Add instance wide custom filter

Adds a custom filter belonging to the instance actor, which is applied to every account.

Downside is, it currently only applies to logged in users.

Signed-off-by: polyamAdmin <117664621+polyamAdmin@users.noreply.github.com>

* Add ability to hide toots in reports

Adds a new report action to hide (filter) toots using the instance custom filter.

Also supports appeals.

Signed-off-by: polyamAdmin <117664621+polyamAdmin@users.noreply.github.com>

* Remove instance filter from filter modal

The filter modal shows the instance filter as it has to be exposed via API to take effect.

No toots can be manually added to it, so showing it is useless.

Signed-off-by: polyamAdmin <117664621+polyamAdmin@users.noreply.github.com>

* Re-add hidden_by_moderator status attribute

Add `hidden_by_moderator` attribute, which is set by resolving reports with the "hide" option.

This allows toots to be hidden for logged out users without exposing filters.

Signed-off-by: polyamAdmin <117664621+polyamAdmin@users.noreply.github.com>

* Use `hidden_by_moderator` instead of custom filter in web UI

This gives more control over how hidden toots are displayed.

Signed-off-by: polyamAdmin <117664621+polyamAdmin@users.noreply.github.com>

* Add missing translations

Signed-off-by: polyamAdmin <117664621+polyamAdmin@users.noreply.github.com>

* Apply instance custom filter in all contexts

Toots with the `hidden_by_moderator` attribute are also displayed with a warning in all contexts, so this is more consistent.

Signed-off-by: polyamAdmin <117664621+polyamAdmin@users.noreply.github.com>

* Set `hidden_by_moderator` attribute with custom filter

Instead of saving `hidden_by_moderator` in the statuses table, looks up whether status is included in instance custom filter.

Signed-off-by: polyamAdmin <117664621+polyamAdmin@users.noreply.github.com>

* Fi

--- a/config/locales-glitch/en.yml
+++ b/config/locales-glitch/en.yml
@@ -43,6 +43,15 @@ en:
         text: Simple text
         text_hint: Use this for simple recurring keywords and if you do not know regular expressions.
       updated_msg: Registration text filter successfully updated!
+    reports:
+      actions:
+        hide_description_html: The reported toots will be hidden and a strike will be recorded to help you escalate on future infractions by the same account.
+      hide_and_resolve: Hide toots
+      summary:
+        action_preambles:
+          hide_html: 'You are about to <strong>hide</strong> some of <strong>@%{acct}</strong>''s toots. This will:'
+        actions:
+          hide_html: Hide the offending toots behind a warning
     roles:
       privileges:
         bypass_invite_limits: Bypass invite restrictions
@@ -85,6 +94,13 @@ en:
         title: Allow toots with sensitive media to trend
     statuses:
       reactions: Reactions
+    strikes:
+      actions:
+        hide_statuses: "%{name} has hidden %{target}'s toots"
+  admin_mailer:
+    new_appeal:
+      actions:
+        hide_statuses: to hide their toots
   appearance:
     localization:
       glitch_guide_link: https://crowdin.com/project/glitch-soc
@@ -94,6 +110,13 @@ en:
     captcha_confirmation:
       hint_html: Just one more step! To confirm your account, this server requires you to solve a CAPTCHA. You can <a href="/about/more">contact the server administrator</a> if you have questions or need assistance with confirming your account.
       title: User verification
+  disputes:
+    strikes:
+      title_actions:
+        hide_statuses: Toot hiding
+  filters:
+    instance_filter:
+      title: Hidden by moderators
   generic:
     use_this: Use this
   invites:
@@ -114,5 +137,13 @@ en:
   sounds:
     default: Boop
     laser: Laser
+  user_mailer:
+    warning:
+      explanation:
+        hide_statuses: Some of your toots have been found to violate one or more community guidelines and have been subsequently hidden by the moderators of %{instance}.
+      subject:
+        hide_statuses: Your toots on %{acct} have been hidden
+      title:
+        hide_statuses: Toots hidden
   users:
     invalid_invite_request_text: This text includes forbidden words or expressions
