Change i18n-tasks to consider polyam-glitch files
Consider upstream translations as external and therefore unchangable.

Co-authored-by: Plastikmensch <plastikmensch@users.noreply.github.com>
Signed-off-by: polyamAdmin <117664621+polyamAdmin@users.noreply.github.com>

--- a/config/i18n-tasks.yml
+++ b/config/i18n-tasks.yml
@@ -4,19 +4,21 @@
 base_locale: en
 data:
   read:
-    - config/locales-glitch/%{locale}.yml
-    - config/locales-glitch/*.%{locale}.yml
+    - config/locales-polyam/%{locale}.yml
+    - config/locales-polyam/*.%{locale}.yml
 
   write:
     - [
         '{devise, simple_form, doorkeeper}.*',
-        'config/locales-glitch/\1.%{locale}.yml',
+        'config/locales-polyam/\1.%{locale}.yml',
       ]
-    - config/locales-glitch/%{locale}.yml
+    - config/locales-polyam/%{locale}.yml
 
   external:
     - config/locales/%{locale}.yml
     - config/locales/**/*.%{locale}.yml
+    - config/locales-glitch/%{locale}.yml
+    - config/locales-glitch/**/*.%{locale}.yml
 
   yaml:
     write:
