--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,7 +17,9 @@
       "flavours/glitch": ["app/javascript/flavours/glitch"],
       "flavours/glitch/*": ["app/javascript/flavours/glitch/*"],
       "mastodon": ["app/javascript/mastodon"],
-      "mastodon/*": ["app/javascript/mastodon/*"]
+      "mastodon/*": ["app/javascript/mastodon/*"],
+      "flavours/polyam": ["app/javascript/flavours/polyam"],
+      "flavours/polyam/*": ["app/javascript/flavours/polyam/*"]
     }
   },
   "include": [
@@ -25,6 +27,7 @@
     "app/javascript/packs",
     "app/javascript/types",
     "app/javascript/flavours/glitch",
-    "app/javascript/core"
+    "app/javascript/core",
+    "app/javascript/flavours/polyam"
   ]
 }
