Change default settings from glitch to polyam
Sets the polyam flavour as default and changes site title.

Co-authored-by: Plastikmensch <plastikmensch@users.noreply.github.com>
Signed-off-by: polyamAdmin <117664621+polyamAdmin@users.noreply.github.com>

--- a/config/settings.yml
+++ b/config/settings.yml
@@ -2,7 +2,7 @@
 # important settings can be changed from the admin interface.
 
 defaults: &defaults
-  site_title: 'Mastodon Glitch Edition'
+  site_title: 'Mastodon Polyam Edition'
   site_short_description: ''
   site_description: ''
   site_extended_description: ''
@@ -18,7 +18,7 @@ defaults: &defaults
   show_application: false
   noindex: false
   norss: false
-  flavour: 'glitch'
+  flavour: 'polyam'
   skin: 'default'
   trends: true
   trends_as_landing_page: false
