--- a/app/javascript/flavours/polyam/theme.yml
+++ b/app/javascript/flavours/polyam/theme.yml
@@ -33,7 +33,7 @@ inherit_locales: glitch
 
 #  (OPTIONAL) A file to use as the preview screenshot for the flavour,
 #  or an array thereof. These are the full path from `app/javascript/`.
-#screenshot: flavours/glitch/images/glitch-preview.jpg
+screenshot: flavours/polyam/images/polyam-preview.png
 
 #  (OPTIONAL) The directory which contains the pack files.
 #  Defaults to the theme directory (`app/javascript/themes/[theme]`),
