Fix haml-lint issues
Co-authored-by: Plastikmensch <plastikmensch@users.noreply.github.com>
Signed-off-by: polyamAdmin <117664621+polyamAdmin@users.noreply.github.com>

--- a/.haml-lint_todo.yml
+++ b/.haml-lint_todo.yml
@@ -14,6 +14,7 @@ linters:
       - 'app/views/admin/accounts/index.html.haml'
       - 'app/views/admin/ip_blocks/new.html.haml'
       - 'app/views/admin/roles/_form.html.haml'
+      - 'app/views/admin/settings/appearance/show.html.haml'
       - 'app/views/admin/settings/discovery/show.html.haml'
       - 'app/views/auth/registrations/edit.html.haml'
       - 'app/views/auth/registrations/new.html.haml'
