--- a/package.json
+++ b/package.json
@@ -49,6 +49,11 @@
     "@babel/preset-typescript": "^7.21.5",
     "@babel/runtime": "^7.22.3",
     "@formatjs/intl-pluralrules": "^5.2.2",
+    "@fortawesome/fontawesome-svg-core": "^6.5.1",
+    "@fortawesome/free-brands-svg-icons": "^6.5.1",
+    "@fortawesome/free-regular-svg-icons": "^6.5.1",
+    "@fortawesome/free-solid-svg-icons": "^6.5.1",
+    "@fortawesome/react-fontawesome": "^0.2.0",
     "@gamestdio/websocket": "^0.3.2",
     "@github/webauthn-json": "^2.1.1",
     "@material-symbols/svg-600": "^0.14.0",
