Replace locale strings containing "applies to Glitch flavour only"
This has been misleading as these settings also apply to the polyam flavour.

Co-authored-by: Plastikmensch <plastikmensch@users.noreply.github.com>
Signed-off-by: polyamAdmin <117664621+polyamAdmin@users.noreply.github.com>

--- a/config/locales-polyam/simple_form.en.yml
+++ b/config/locales-polyam/simple_form.en.yml
@@ -12,7 +12,9 @@ en:
     labels:
       defaults:
         setting_enable_rss: Enable RSS feed for your public toots
+        setting_polyam_favourite_modal: Show confirmation dialog before favouriting
         setting_notification_sound: Notification Sound
+        setting_polyam_system_emoji_font: Use system's default font for emojis
         setting_visible_reactions: Number of visible emoji reactions
       form_admin_settings:
         publish_button_text: Publish button text
