--- a/.prettierignore
+++ b/.prettierignore
@@ -96,3 +96,6 @@ app/javascript/flavours/polyam/styles/reset.scss
 
 # Ignore polyam-glitch emoji map file
 /app/javascript/flavours/polyam/features/emoji/emoji_map.json
+
+# Ignore polyam-glitch emoji data file
+/app/javascript/flavours/polyam/features/emoji/emoji_data.json
