Fix policy display for domain blocks with none severity
`noop` was filtered from policies, so instead of showing policies in the admin interface it showed nothing for domain blocks with the "None" severity.

This removed filtering `noop` from policies and displays it in the instances overview.

Co-authored-by: Plastikmensch <plastikmensch@users.noreply.github.com>
Signed-off-by: polyamAdmin <117664621+polyamAdmin@users.noreply.github.com>

--- a/config/locales-polyam/en.yml
+++ b/config/locales-polyam/en.yml
@@ -14,6 +14,10 @@ en:
       category_hint: Optional. Assign the emoji to a category.
       visible_in_picker: Show in emoji picker
       visible_in_picker_hint: Makes this emoji available in the emoji picker and API.
+    instances:
+      content_policies:
+        policies:
+          noop: None
     registration_filters:
       add_new: Add new filter
       created_msg: Registration text filter successfully created!
