[WIP] Add public comment to instance moderation
Co-authored-by: Plastikmensch <plastikmensch@users.noreply.github.com>
Signed-off-by: polyamAdmin <117664621+polyamAdmin@users.noreply.github.com>

--- a/config/locales-polyam/en.yml
+++ b/config/locales-polyam/en.yml
@@ -18,6 +18,7 @@ en:
       content_policies:
         policies:
           noop: None
+      reason_unavailable: No reason available
     registration_filters:
       add_new: Add new filter
       created_msg: Registration text filter successfully created!
