Increase and make score half-life for trending toots configurable
Adds a new env var: `TRENDS_TOOT_HALFLIFE`

4 is just a random number that seems to make sense.

Co-authored-by: Plastikmensch <plastikmensch@users.noreply.github.com>
Signed-off-by: polyamAdmin <117664621+polyamAdmin@users.noreply.github.com>

--- a/.env.production.sample
+++ b/.env.production.sample
@@ -298,6 +298,12 @@ MAX_REACTIONS=1
 # Customize the number of hashtags shown in 'Explore'
 # MAX_TRENDING_TAGS=10
 
+# Score half-life for trending toots in hours
+# Influences how long toots trend for
+# Higher values recommended for small instances, lower for larger ones
+# Upstream uses 1
+# TRENDS_TOOT_HALFLIFE=4
+
 # Maximum custom emoji file sizes
 # If undefined or smaller than MAX_EMOJI_SIZE, the value
 # of MAX_EMOJI_SIZE will be used for MAX_REMOTE_EMOJI_SIZE
