[Polyam] Rename “home” pack to “application”
Port dee57982f101a29bc9b2c44a331e33305b422307 to polyam-glitch

Co-authored-by: Plastikmensch <plastikmensch@users.noreply.github.com>
Signed-off-by: polyamAdmin <117664621+polyamAdmin@users.noreply.github.com>

--- a/app/javascript/flavours/polyam/theme.yml
+++ b/app/javascript/flavours/polyam/theme.yml
@@ -10,8 +10,8 @@ pack:
     filename: common.js
     stylesheet: true
   error: error.js
-  home:
-    filename: home.js
+  application:
+    filename: application.js
     preload:
       - flavours/polyam/async/compose
       - flavours/polyam/async/home_timeline
