Add setting to customise dark/light skin in system theme
Co-authored-by: Plastikmensch <plastikmensch@users.noreply.github.com>
Signed-off-by: polyamAdmin <117664621+polyamAdmin@users.noreply.github.com>

--- a/config/locales-polyam/en.yml
+++ b/config/locales-polyam/en.yml
@@ -62,6 +62,10 @@ en:
       discovery:
         rss: RSS
         search: Search
+      system_dark:
+        title: Dark skin
+      system_light:
+        title: Light skin
       trending_status_sensitive:
         desc_html: When trending toots are enabled, allow toots with sensitive media to be eligible. Changes to this setting are not retroactive.
         title: Allow toots with sensitive media to trend
