Add admin setting to customise dark/light skin in system theme (#545)
* Add setting to customise dark/light skin in system theme

Co-authored-by: Plastikmensch <plastikmensch@users.noreply.github.com>
Signed-off-by: polyamAdmin <117664621+polyamAdmin@users.noreply.github.com>

* Change input to list flavour and skin

Co-authored-by: Plastikmensch <plastikmensch@users.noreply.github.com>
Signed-off-by: polyamAdmin <117664621+polyamAdmin@users.noreply.github.com>

* Disable unselected flavour group in input

Co-authored-by: Plastikmensch <plastikmensch@users.noreply.github.com>
Signed-off-by: polyamAdmin <117664621+polyamAdmin@users.noreply.github.com>

* Add and use helper for custom system skins

Add fallback to defaults for configured custom system skins

Adds helper to use custom system skins

Changes `current_theme` to also include custom system skins

Changes in `assets.rake` prevents precompile looking up values in redis, which breaks specs.

Co-authored-by: Plastikmensch <plastikmensch@users.noreply.github.com>
Signed-off-by: polyamAdmin <117664621+polyamAdmin@users.noreply.github.com>

* Add hint to setting

Clarify these are for system skin

Co-authored-by: Plastikmensch <plastikmensch@users.noreply.github.com>
Signed-off-by: polyamAdmin <117664621+polyamAdmin@users.noreply.github.com>

* Reset selected skins on flavour change

Resets the selected skins to defaults when not available in selected flavour.

Co-authored-by: Plastikmensch <plastikmensch@users.noreply.github.com>
Signed-off-by: polyamAdmin <117664621+polyamAdmin@users.noreply.github.com>

* Change hint to include note that selected skins apply to all flavours

Co-authored-by: Plastikmensch <plastikmensch@users.noreply.github.com>
Signed-off-by: polyamAdmin <117664621+polyamAdmin@users.noreply.github.com>

* Add polyam label to settings

Co-authored-by: Plastikmensch <plastikmensch@users.noreply.github.com>
Signed-off-by: polyamAdmin <117664621+pol

--- a/config/locales-polyam/en.yml
+++ b/config/locales-polyam/en.yml
@@ -62,6 +62,12 @@ en:
       discovery:
         rss: RSS
         search: Search
+      system_dark:
+        desc_html: Skin used as dark skin in system skin. Applies to all flavours
+        title: Dark skin
+      system_light:
+        desc_html: Skin used as light skin in system skin. Applies to all flavours
+        title: Light skin
       trending_status_sensitive:
         desc_html: When trending toots are enabled, allow toots with sensitive media to be eligible. Changes to this setting are not retroactive.
         title: Allow toots with sensitive media to trend
