Add ability to search instances by comment
Adds a new text input to `/admin/instances`

Adds `by_comment` to InstanceFilter

Adds new scope to search for domain block comments to instance model

Co-authored-by: Plastikmensch <plastikmensch@users.noreply.github.com>
Signed-off-by: polyamAdmin <117664621+polyamAdmin@users.noreply.github.com>

--- a/config/locales-polyam/en.yml
+++ b/config/locales-polyam/en.yml
@@ -15,6 +15,7 @@ en:
       visible_in_picker: Show in emoji picker
       visible_in_picker_hint: Makes this emoji available in the emoji picker and API.
     instances:
+      by_comment: Public or private comment
       content_policies:
         policies:
           noop: None
